gke-autopilot/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hpa-example
---
apiVersion: v1
kind: Namespace
metadata:
  name: hello-app-example
