gke-autopilot/k8s/Deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-app
  labels:
    app.kubernetes.io/name: hello-app
spec:
  containers:
  - name: hello-app
    image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
    ports:
      - containerPort: 8080
        name: http
