gke-autopilot/k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
spec:
  selector:
    app.kubernetes.io/name: hello-app
  type: NodePort
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: http
