gke-autopilot/k8s/hello-app-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-app
  labels:
    app.kubernetes.io/name: hello-app
spec:
  containers:
  - name: hello-app
    image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
    ports:
      - containerPort: 8080
        name: http
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
spec:
  selector:
    app.kubernetes.io/name: hello-app
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    # kubernetes.io/ingress.global-static-ip-name: hello-app-ip
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: hello-app-service
      port:
        number: 80
