gke-autopilot/k8s/hpa-example.yaml
# Source: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-example
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hpa-example
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hpa-example
    spec:
      containers:
      - name: hpa-example
        image: k8s.gcr.io/hpa-example
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: hpa-example
  labels:
    app.kubernetes.io/name: hpa-example
spec:
  selector:
    app.kubernetes.io/name: hpa-example
  ports:
  - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hpa-example
  annotations:
    # kubernetes.io/ingress.global-static-ip-name: hpa-example-ip
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: hpa-example
      port:
        number: 80
